se cambiaron lso efectos de imagenes, y ya tienen modal, los links de contacto ya están, responsive ya está

--- a/portafolio.html
+++ b/portafolio.html
@@ -139,106 +139,99 @@
 		</div>
 		<section > <!-- aquí van las fotos de lo que me gusta -->
 			<div class="row">
-				<div class="col s4 m4">
-		<!--			<a href="gustos/foto.jpg" class="waves-effect waves-light">
-					
+				<div class="col s4 m4 center"> <!-- cada col será una foto -->
+					<a class="modal-trigger waves-effect waves-light foto-size" href="#modal1" id="flores">	
+						<i class="large small material-icons zoom responsive-img animated infinite pulse">zoom_in</i>
 					</a>
-					<div id="modal1" class="modal">
-    					<div class="modal-content">	
-    						<img src="gustos/foto.jpg" class=" responsive-img bottom-sheet" id="modal1">
-    						<h4>Modal Header</h4>
-      						<p>A bunch of text</p>
-						</div>
-					</div>	
-				</div>	-->
-		
-	<a class="modal-trigger waves-effect waves-light" href="#modal1" id="foto">	
-		<h2>Fotografía</h2>
-	</a>
-  <!-- Modal Structure -->
-  <div id="modal1" class="modal modal-fixed-footer">
-    <div class="modal-content">
-    <img src="gustos/foto.jpg" class=" responsive-img bottom-sheet" id="modal1">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-    </div>
-  </div>
-
-  
-
-
-
-
-					<div class="dtl">
-           		<!--			<h2 class="h2">Fotografía</h2>
-           					<p class="p">Capturar los mejores momentos</p>
-        				</div> -->
-					</div>		
+  				<!-- Modal Structure -->
+  					<div id="modal1" class="modal modal-fixed-footer">
+    					<div class="modal-content">
+    						<img src="gustos/foto.jpg" class="responsive-img bottom-sheet " id="modal1">
+      						<h4>Fotografía</h4>
+      						<p>Capturar los mejores momentos que ofrece la naturaleza, personas y estructuras. </p>
+    					</div>
+    					<div class="modal-footer">
+      						<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">X</a>
+    					</div>
+  					</div>
 				</div>
-				<div class="col s4 m4">
-
-<a class="modal-trigger waves-effect waves-light btn" href="#modal2">Modal</a>
-<div id="modal2" class="modal modal-fixed-footer">
-    <div class="modal-content">
-    <img src="gustos/dis.jpg" class="imgg responsive-img" >
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-    </div>
-  </div>
-
-
-				<!--
-					<div class="dtl25">
-					 	<img src="gustos/dis.jpg" class="imgg responsive-img" >
-						<div class="dtl">
-           					<h2 class="h2">Diseño</h2>
-           					<p class="p">Diseño gráfico, de interiores y web</p>
-        				</div>
-					 </div> -->
+				<div class="col s4 m4 center">
+					<a class="modal-trigger waves-effect waves-light foto-size" href="#modal2" id="dis">
+						<i class="large small material-icons zoom responsive-img animated infinite pulse">zoom_in</i>
+					</a>
+					<div id="modal2" class="modal modal-fixed-footer">
+    					<div class="modal-content">
+    						<img src="gustos/dis.jpg" class="responsive-img bottom-sheet" id="modal2">
+      						<h4>Diseño</h4>
+      						<p>Diseño gráfico, de interiores y web.</p>
+    					</div>
+    					<div class="modal-footer">
+      						<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">X</a>
+    					</div>
+  					</div>
 				</div>
-				<div class="col s4 m4">
-					<div class="dtl25">
-						<img src="gustos/espacios.jpg" class="imgg responsive-img">
-						<div class="dtl">
-           					<h2 class="h2">Cultura</h2>
-           					<p class="p">Asistir a espacios culturales</p>
-        				</div>
-					</div>	
+				<div class="col s4 m4 center">
+					<a class="modal-trigger waves-effect waves-light foto-size" href="#modal3" id="espacios">
+						<i class="large small material-icons zoom responsive-img animated infinite pulse">zoom_in</i>
+					</a>
+					<div id="modal3" class="modal modal-fixed-footer">
+    					<div class="modal-content">
+    						<img src="gustos/espacios.jpg" class="responsive-img bottom-sheet" id="modal3">
+      						<h4>Cultura</h4>
+      						<p>Conocer diversos espacios de expresión cultural.</p>
+    					</div>
+    					<div class="modal-footer">
+      						<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">X</a>
+    					</div>
+  					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col s4 m4">
-					<div class="dtl25">
-						<img src="gustos/conocer.jpg" class="imgg responsive-img">
-						<div class="dtl">
-           					<h2 class="h2">Viajar</h2>
-           					<p class="p">Conocer diferentes lugares <br>de nuestro país</p>
-        				</div>
-					</div>	
+				<div class="col s4 m4 center"> <!-- cada col será una foto -->
+					<a class="modal-trigger waves-effect waves-light foto-size" href="#modal4" id="conocer">	
+						<i class="large small material-icons zoom responsive-img animated infinite pulse">zoom_in</i>
+					</a>
+  				<!-- Modal Structure -->
+  					<div id="modal4" class="modal modal-fixed-footer">
+    					<div class="modal-content">
+    						<img src="gustos/conocer.JPG" class="responsive-img bottom-sheet " id="modal4">
+      						<h4>Viajar</h4>
+      						<p>Conocer diferentes lugares de nuestro país</p>
+    					</div>
+    					<div class="modal-footer">
+      						<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">X</a>
+    					</div>
+  					</div>
 				</div>
-				<div class="col s4 m4">
-					<div class="dtl25">
-						<img src="gustos/ilus.jpg" class="imgg responsive-img">
-						<div class="dtl">
-           					<h2 class="h2">Ilustración</h2>
-           					<p class="p">Mezclar los diferentes tipos y <br> técnicas de ilustración</p>
-        				</div>
-        			</div>
+				<div class="col s4 m4 center">
+					<a class="modal-trigger waves-effect waves-light foto-size" href="#modal5" id="ilus">
+						<i class="large small material-icons zoom responsive-img animated infinite pulse">zoom_in</i>
+					</a>
+					<div id="modal5" class="modal modal-fixed-footer">
+    					<div class="modal-content">
+    						<img src="gustos/ilus.jpg" class="responsive-img bottom-sheet" id="modal5">
+      						<h4>Ilustración</h4>
+      						<p>Mezclar los diferentes tipos y técnicas de ilustración.</p>
+    					</div>
+    					<div class="modal-footer">
+      						<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">X</a>
+    					</div>
+  					</div>
 				</div>	
-				<div class="col s4 m4">
-					<div class="dtl25">
-						<img src="gustos/conciertos.jpg" class="imgg responsive-img">
-						<div class="dtl">
-           					<h2 class="h2">Conciertos</h2>
-           					<p class="p">Asistir a conciertos en vivo</p>
-        				</div>
-        			</div>
+				<div class="col s4 m4 center">
+					<a class="modal-trigger waves-effect waves-light foto-size" href="#modal6" id="conciertos">
+						<i class="large small material-icons zoom responsive-img animated infinite pulse">zoom_in</i>
+					</a>
+					<div id="modal6" class="modal modal-fixed-footer">
+    					<div class="modal-content">
+    						<img src="gustos/conciertos.jpg" class="responsive-img bottom-sheet" id="modal6">
+      						<h4> Conciertos</h4>
+      						<p>Asistir a conciertos en vivo</p>
+    					</div>
+    					<div class="modal-footer">
+      						<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">X</a>
+    					</div>
+  					</div>
 				</div>
 			</div>
 		</section>
