--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!--<script type="text/javascript" src="js/script.js"></script>-->
 </head>
 <body class="body1">
-	<!--<div id="info">  este es el div que contiene el fondo que se moverá siguiendo al cursor // a final de cuentas se quitó el efecto y se eliminó el script.js correspondiente -->
+	<!--<div id="info">  este es el div que contiene el fondo que se moverá siguiendo al cursor // a final de cuentas se quitó el efecto y se eliminó el script.js correspondiente mmmmm-->
 		<div class="row"> 
 			<div class="col s12 m12 l12">
 				<div class="cuadro-blanco"> <!-- este es el cuadro grandote -->
