--- a/portafolio.html
+++ b/portafolio.html
@@ -234,7 +234,7 @@
   				<!-- Modal Structure -->
   					<div id="modal4" class="modal modal-fixed-footer">
     					<div class="modal-content">
-    						<img src="gustos/conocer.JPG" class="responsive-img bottom-sheet " id="modal4">
+    						<img src="gustos/conocer.jpg" class="responsive-img bottom-sheet " id="modal4">
       						<h4>Viajar</h4>
       						<p>Conocer diferentes lugares de nuestro país</p>
     					</div>
