--- a/portafolio.html
+++ b/portafolio.html
@@ -162,11 +162,11 @@
 						</div>
 					</li>
 					<li>
-						<img src="proyectos/whats.JPG" class="responsive-img">
+						<img src="proyectos/dashboard.jpg" class="responsive-img">
 						<div class="caption center-align">
-      					<a href="https://montserratgonzalez1.github.io/46_Whatsapp/" target="blank">
-      						<h3 id="morado">Whatsapp Web </h3>
-          					<h5  id="morado">Conocer más </h5>
+      					<a href="https://montserratgonzalez1.github.io/45_adventure/" target="blank">
+      						<h3>Adveture Time: Dashboard </h3>
+          					<h5 >Conocer más </h5>
           				</a> 
 						</div>
 					</li>
