--- a/portafolio.html
+++ b/portafolio.html
@@ -162,7 +162,7 @@
 						</div>
 					</li>
 					<li>
-						<img src="proyectos/dashboard.jpg" class="responsive-img">
+						<img src="proyectos/dashboard.JPG" class="responsive-img">
 						<div class="caption center-align">
       					<a href="https://montserratgonzalez1.github.io/45_adventure/" target="blank">
       						<h3>Adveture Time: Dashboard </h3>
