--- a/portafolio.html
+++ b/portafolio.html
@@ -60,12 +60,14 @@
       			<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i>
       			</a>
       			<ul class="right hide-on-med-and-down ">
+      				<li><a href="index.html">¡ Hola !</a></li>
         			<li><a href="#misproyectos">Portafolio</a></li>
         			<li><a href="#gustos">Algo que...</a></li>
         			<li><a href="#curri" >Descarga CV</a></li>
         			<li><a href="#contacto">Contáctame</a></li>
       			</ul>
       			<ul class="side-nav" id="mobile-demo">
+      				<li><a href="index.html">¡ Hola !</a></li
         			<li><a href="#misproyectos">Portafolio</a></li>
         			<li><a href="#gustos">Algo que...</a></li>
         			<li><a href="#curri" >Descarga CV</a></li>
@@ -138,8 +140,8 @@
       					<img src="proyectos/comunidad.jpg" class="responsive-img">
       					<div class="caption center-align">
       						<a href="https://montserratgonzalez1.github.io/18_Comunidad-Sostenible/" target="blank">
-      							<h3>Comunidad Sostenible</h3>
-          						<h5 class="light grey-text text-lighten-3">Conocer más </h5>
+      							<h3>Comunidad Sostenible <br> <span>Conocer más </span></h3>
+   
           					</a> 
 						</div>
 					</li>
@@ -147,8 +149,7 @@
 						<img src="proyectos/kane.jpg" class="responsive-img">
 						<div class="caption center-align">
       						<a href="https://montserratgonzalez1.github.io/kane/" target="blank">
-      							<h3 id="morado">Kane Theme <br>(Paleta de colores)</h3>
-								<h5 class="light " id="morado">Conocer más </h5>
+      							<h3>Kane Theme <br>(Paleta de colores) <br> <span>Conocer más </span></h3>
 							</a> 
 						</div>
 					</li>	
@@ -156,8 +157,7 @@
 						<img src="proyectos/spring.JPG" class="responsive-img">
 						<div class="caption center-align">
       						<a href="https://montserratgonzalez1.github.io/26_Sprint/" target="blank">
-      							<h3>Flatness Spring Came</h3>
-          						<h5 class="light grey-text text-lighten-3">Conocer más  </h5>
+      							<h3>Flatness Spring Came <br> <span>Conocer más </span></h3>
           					</a>
 						</div>
 					</li>
@@ -165,8 +165,8 @@
 						<img src="proyectos/dashboard.JPG" class="responsive-img">
 						<div class="caption center-align">
       					<a href="https://montserratgonzalez1.github.io/45_adventure/" target="blank">
-      						<h3>Adveture Time: Dashboard </h3>
-          					<h5 >Conocer más </h5>
+      						<h3>Adveture Time: Dashboard <br> <span>Conocer más </span> </h3>
+          					
           				</a> 
 						</div>
 					</li>
@@ -181,14 +181,15 @@
 			<div class="row">
 				<div class="col s4 m4 center"> <!-- cada col será una foto -->
 					<a class="modal-trigger waves-effect waves-light foto-size" href="#modal1" id="flores">	
-						<i class="large small material-icons zoom responsive-img animated infinite pulse">zoom_in</i>
+						<i class="large small material-icons zoom responsive-img animated infinite pulse z-index">zoom_in</i>
 					</a>
   				<!-- Modal Structure -->
-  					<div id="modal1" class="modal modal-fixed-footer">
+  					<div id="modal1" class="modal modal-footer">
     					<div class="modal-content">
     						<img src="gustos/foto.jpg" class="responsive-img bottom-sheet " id="modal1">
-      						<h4>Fotografía</h4>
+      						<h5>Fotografía</h5>
       						<p>Capturar los mejores momentos que ofrece la naturaleza, personas y estructuras. </p>
+      						<p>Fotografía: Montse / Mi jardín</p>
     					</div>
     					<div class="modal-footer">
       						<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">X</a>
@@ -199,10 +200,10 @@
 					<a class="modal-trigger waves-effect waves-light foto-size" href="#modal2" id="dis">
 						<i class="large small material-icons zoom responsive-img animated infinite pulse">zoom_in</i>
 					</a>
-					<div id="modal2" class="modal modal-fixed-footer">
+					<div id="modal2" class="modal modal-footer">
     					<div class="modal-content">
     						<img src="gustos/dis.jpg" class="responsive-img bottom-sheet" id="modal2">
-      						<h4>Diseño</h4>
+      						<h5>Diseño</h5>
       						<p>Diseño gráfico, de interiores y web.</p>
     					</div>
     					<div class="modal-footer">
@@ -214,11 +215,13 @@
 					<a class="modal-trigger waves-effect waves-light foto-size" href="#modal3" id="espacios">
 						<i class="large small material-icons zoom responsive-img animated infinite pulse">zoom_in</i>
 					</a>
-					<div id="modal3" class="modal modal-fixed-footer">
+					<div id="modal3" class="modal modal-footer">
     					<div class="modal-content">
     						<img src="gustos/espacios.jpg" class="responsive-img bottom-sheet" id="modal3">
-      						<h4>Cultura</h4>
+      						<h5>Cultura</h5>
       						<p>Conocer diversos espacios de expresión cultural.</p>
+      						<p>Fotografía: Montse / Obra: RAPITAE 11,154-11,518
+							"el tiempo nunca regresa, pero se puede recolectar..." Yupica / México–Japón</p>
     					</div>
     					<div class="modal-footer">
       						<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">X</a>
@@ -232,11 +235,12 @@
 						<i class="large small material-icons zoom responsive-img animated infinite pulse">zoom_in</i>
 					</a>
   				<!-- Modal Structure -->
-  					<div id="modal4" class="modal modal-fixed-footer">
+  					<div id="modal4" class="modal modal-footer">
     					<div class="modal-content">
     						<img src="gustos/conocer.jpg" class="responsive-img bottom-sheet " id="modal4">
-      						<h4>Viajar</h4>
+      						<h5>Viajar</h5>
       						<p>Conocer diferentes lugares de nuestro país</p>
+      						<p>Tenango del Valle</p>
     					</div>
     					<div class="modal-footer">
       						<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">X</a>
@@ -247,10 +251,10 @@
 					<a class="modal-trigger waves-effect waves-light foto-size" href="#modal5" id="ilus">
 						<i class="large small material-icons zoom responsive-img animated infinite pulse">zoom_in</i>
 					</a>
-					<div id="modal5" class="modal modal-fixed-footer">
+					<div id="modal5" class="modal modal-footer">
     					<div class="modal-content">
     						<img src="gustos/ilus.jpg" class="responsive-img bottom-sheet" id="modal5">
-      						<h4>Ilustración</h4>
+      						<h5>Ilustración</h5>
       						<p>Mezclar los diferentes tipos y técnicas de ilustración.</p>
     					</div>
     					<div class="modal-footer">
@@ -262,11 +266,12 @@
 					<a class="modal-trigger waves-effect waves-light foto-size" href="#modal6" id="conciertos">
 						<i class="large small material-icons zoom responsive-img animated infinite pulse">zoom_in</i>
 					</a>
-					<div id="modal6" class="modal modal-fixed-footer">
+					<div id="modal6" class="modal modal-footer">
     					<div class="modal-content">
-    						<img src="gustos/conciertos.jpg" class="responsive-img bottom-sheet" id="modal6">
-      						<h4> Conciertos</h4>
+    						<img src="gustos/concierto2.jpg" class="responsive-img bottom-sheet" id="modal6">
+      						<h5> Conciertos</h5>
       						<p>Asistir a conciertos en vivo</p>
+      						<p>Fotografía: Montse / Panteón Rococó</p>
     					</div>
     					<div class="modal-footer">
       						<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">X</a>
@@ -276,10 +281,9 @@
 			</div>
 		</section>
 		<div class="row" id="curri">
-			<div class="col s12 m12"> 
+			<div class="col s12 m12 l6"> 
 				<p class="titulares center mar-top100" >Descarga mi CV</p>
-			</div>
-			<section>
+			<!--	<section> -->
 				<div class="row">
 					<div class="col s12 m12 center">
 						<div id="cv" class="waves-effect waves-green">
@@ -292,7 +296,66 @@
 								<!-- el nombre del cv debe estar en minusculas -->
 					</div>
 				</div>
-			</section>	 <!-- aquí termina el cv -->
+		<!--	</section>	 aquí termina el cv -->
+			</div>
+			<div class="col s12 m12 l6">
+				<p class="titulares center mar-top100" >Habilidades</p>
+					<div class="row">
+						<div class="col s6">
+							<div class="row">
+								<i class="material-icons skill ">library_books</i> 
+								<p class="tooltip ">Aprendizaje continuo</p>
+							</div>
+							<div class="row">
+								<i class="material-icons skill">supervisor_account</i>
+								<p class="tooltip ">Trabajo en equipo</p>
+							</div>
+							<div class="row">
+								<i class="material-icons skill">build</i>
+								<p class="tooltip ">Proactividad</p>
+							</div>
+							<div class="row">
+								<i class="material-icons skill">done_all</i>
+								<p class="tooltip ">Comprometida</p>
+							</div>
+							<div class="row">
+								<i class="material-icons skill">accessibility</i>
+								<p class="tooltip ">Adaptabilidad</p>
+							</div>
+							<div class="row">
+								<i class="material-icons skill">dns</i>
+								<p class="tooltip ">Organizacion</p>
+							</div>
+						</div>
+						<div class="col s6">
+							<div class="row">
+								<i class="material-icons skill">dashboard</i>
+								<p class="tooltip ">Bootstrap / Medio</p>
+							</div>
+							<div class="row">
+								<i class="material-icons skill">dashboard</i>
+								<p class="tooltip ">Materialize / Básico</p>
+							</div>
+							<div class="row">
+								<i class="material-icons skill">invert_colors_off</i>
+								<p class="tooltip ">CSS/ Medio</p>
+							</div>
+							<div class="row">
+								<i class="material-icons skill">invert_colors_off</i>
+								<p class="tooltip ">Jade/ Básico</p>
+							</div>
+							<div class="row">
+								<i class="material-icons skill">touch_app</i>
+								<p class="tooltip ">JavaScript/ Básico</p>
+							</div>
+							<div class="row">
+								<i class="material-icons skill">remove_from_queue</i>
+								<p class="tooltip ">HTML/ Medio</p>
+							</div>
+
+						</div>
+					</div>
+			</div>	
 		</div>
 		<div class="row"  id="contacto"> <!--aquí van los titulares de contacto-->
 			<div class="col s12"> 
