--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="row"> 
 			<div class="col s12 m12 l12">
 				<div class="cuadro-blanco"> <!-- este es el cuadro grandote -->
-					<p class="hola">HOLA!</p>
+					<p class="hola">¡HOLA!</p>
 					<div class="row animated fadeInDown"> <!-- es te es el row contendor del texto -->
 						<p class="subti tit top1 ">Soy <span>Montse.</span></p>
 						<br>
@@ -26,7 +26,7 @@
 						<br>
 						<span>Front-End</span> 
 						</p>
-						<p class="subti tit top2">Cónoce mi trabajo</p>
+						<p class="subti tit top2">Conoce mi trabajo</p>
 					</div>
 				</div>
 				<a href="portafolio.html" class="btn_rosa btn-floating btn-large waves-effect waves-light #ff4081 pink accent-2"><i class="material-icons">+</i></a>
