--- a/portafolio.html
+++ b/portafolio.html
@@ -63,14 +63,14 @@
       				<li><a href="index.html">¡ Hola !</a></li>
         			<li><a href="#misproyectos">Portafolio</a></li>
         			<li><a href="#gustos">Algo que...</a></li>
-        			<li><a href="#curri" >Descarga CV</a></li>
+        			<li><a href="#curri" >Descarga CV / Habilidades</a></li>
         			<li><a href="#contacto">Contáctame</a></li>
       			</ul>
       			<ul class="side-nav" id="mobile-demo">
       				<li><a href="index.html">¡ Hola !</a></li
         			<li><a href="#misproyectos">Portafolio</a></li>
         			<li><a href="#gustos">Algo que...</a></li>
-        			<li><a href="#curri" >Descarga CV</a></li>
+        			<li><a href="#curri" >Descarga CV / Habilidades</a></li>
         			<li><a href="#contacto">Contáctame</a></li>
       			</ul>
     		</div>
@@ -231,7 +231,7 @@
 			</div>
 			<div class="row">
 				<div class="col s4 m4 center"> <!-- cada col será una foto -->
-					<a class="modal-trigger waves-effect waves-light foto-size" href="#modal4" id="conocer">	
+					<a class="modal-trigger waves-effect waves-light foto-size" href="#modal4" id="conocer">
 						<i class="large small material-icons zoom responsive-img animated infinite pulse">zoom_in</i>
 					</a>
   				<!-- Modal Structure -->
