--- a/portafolio.html
+++ b/portafolio.html
@@ -63,14 +63,14 @@
       				<li><a href="index.html">¡ Hola !</a></li>
         			<li><a href="#misproyectos">Portafolio</a></li>
         			<li><a href="#gustos">Algo que...</a></li>
-        			<li><a href="#curri" >Descarga CV / Habilidades</a></li>
+        			<li><a href="#curri" >CV y Habilidades</a></li>
         			<li><a href="#contacto">Contáctame</a></li>
       			</ul>
       			<ul class="side-nav" id="mobile-demo">
       				<li><a href="index.html">¡ Hola !</a></li
         			<li><a href="#misproyectos">Portafolio</a></li>
         			<li><a href="#gustos">Algo que...</a></li>
-        			<li><a href="#curri" >Descarga CV / Habilidades</a></li>
+        			<li><a href="#curri" >CV y Habilidades</a></li>
         			<li><a href="#contacto">Contáctame</a></li>
       			</ul>
     		</div>
