--- a/portafolio.html
+++ b/portafolio.html
@@ -360,7 +360,7 @@
 		<div class="row"  id="contacto"> <!--aquí van los titulares de contacto-->
 			<div class="col s12"> 
 					<p class="titulares center mar-top100">Trabaja conmigo</p>
-					<p class="subti center"> CONTACTAME</p>
+					<p class="subti center"> CONTÁCTAME</p>
 			</div>
 		</div>
 		<section>
