--- a/portafolio.html
+++ b/portafolio.html
@@ -61,14 +61,14 @@
       			</a>
       			<ul class="right hide-on-med-and-down ">
       				<li><a href="index.html">¡ Hola !</a></li>
-        			<li><a href="#misproyectos">Portafolio</a></li>
+        			<li><a href="#misproyectos">WEB</a></li>
         			<li><a href="#gustos">Algo que...</a></li>
         			<li><a href="#curri" >CV y Habilidades</a></li>
         			<li><a href="#contacto">Contáctame</a></li>
       			</ul>
       			<ul class="side-nav" id="mobile-demo">
       				<li><a href="index.html">¡ Hola !</a></li
-        			<li><a href="#misproyectos">Portafolio</a></li>
+        			<li><a href="#misproyectos">WEB</a></li>
         			<li><a href="#gustos">Algo que...</a></li>
         			<li><a href="#curri" >CV y Habilidades</a></li>
         			<li><a href="#contacto">Contáctame</a></li>
@@ -80,96 +80,96 @@
 		<div class="row" id="misproyectos"> <!-- empieza titulo de sección -->
 			<div class="col s12 m12 l12">
 				<p class="titulares center">Mis Proyectos</p>
-				<p class="subti center"> PORTAFOLIO</p>
+				<p class="subti center"> Algo de mis diseños Web</p>
 			</div>
 		</div>
-		<section > <!-- este es SLIDE de los proyectos-->
-	<!--		<div class="col s12 m12 l12">
+		<section >		
+	       <!-- este es SLIDE de los proyectos-->
+	       <!--<div class="col s12 m12 l12">
 				<div class="slid">
-					<ul>
-						<div class="hovereffect">  ... proyecto comunidad sostenible ..
-							<li>
-							<img src="proyectos/comunidad.jpg">
-								<div class="overlay">
-									<h1 class="top">
-										<a href="https://montserratgonzalez1.github.io/18_Comunidad-Sostenible/" target="blank">Comunidad Sostenible</a>
-										<p> Conocer más</p>
-									</h1> 
+				  <ul>
+				   <div class="hovereffect">  ... proyecto comunidad sostenible ..
+				     <li>
+					<img src="proyectos/comunidad.jpg">
+					<div class="overlay">
+					  <h1 class="top">
+				           <a href="https://montserratgonzalez1.github.io/18_Comunidad-Sostenible/" target="blank">Comunidad Sostenible</a>
+					   <p> Conocer más</p>
+				          </h1> 
+            				 </div>
+				      </li>
+			            </div>
+				    <div class="hovereffect"> ..proyecto kane ..
+					<li>
+					  <img src="proyectos/kane.jpg">
+					    <div class="overlay">
+					       <h1 class="top">
+					        <a href="https://montserratgonzalez1.github.io/kane/" target="blank">Kane Theme <br>(paleta de colores)</a>
+						<p>Conocer más</p>
+					        </h1> 
+            				     </div>
+					</li>
+				      </div>
+				      <div class="hovereffect"> ..proyecto spring..
+					<li>
+					   <img src="proyectos/spring.JPG">
+					      <div class="overlay">
+						<h1 class="top">
+						<a href="https://montserratgonzalez1.github.io/26_Sprint/" target="blank">Flatness Spring Came</a>
+						<p>Conocer más</p>
+						</h1> 
+            				       </div>
+					 </li>
+					 </div>
+					 <div class="hovereffect"> ..proyecto whats..
+					  <li>
+					     <img src="proyectos/whats.JPG">
+						<div class="overlay">
+						<h1 class="top">
+						<a href="https://montserratgonzalez1.github.io/46_Whatsapp/" target="blank"> Whatsapp <br>(versión Desktop)</a>
+						<p>Conocer más</p>
+						</h1> 
             					</div>
-							</li>
-						</div>
-						<div class="hovereffect"> ..proyecto kane ..
-							<li>
-							<img src="proyectos/kane.jpg">
-								<div class="overlay">
-									<h1 class="top">
-										<a href="https://montserratgonzalez1.github.io/kane/" target="blank">Kane Theme <br>(paleta de colores)</a>
-										<p>Conocer más</p>
-									</h1> 
-            					</div>
-							</li>
-						</div>
-						<div class="hovereffect"> ..proyecto spring..
-							<li>
-							<img src="proyectos/spring.JPG">
-								<div class="overlay">
-									<h1 class="top">
-										<a href="https://montserratgonzalez1.github.io/26_Sprint/" target="blank">Flatness Spring Came</a>
-										<p>Conocer más</p>
-									</h1> 
-            					</div>
-							</li>
-						</div>
-						<div class="hovereffect"> ..proyecto whats..
-							<li>
-							<img src="proyectos/whats.JPG">
-								<div class="overlay">
-									<h1 class="top">
-										<a href="https://montserratgonzalez1.github.io/46_Whatsapp/" target="blank"> Whatsapp <br>(versión Desktop)</a>
-										<p>Conocer más</p>
-									</h1> 
-            					</div>
-							</li>
-						</div>
+					  </li>
+					  </div>
 					</ul>
   				</div>
       			</div>		-->
       		 <div class="slider">
     			<ul class="slides">
-      				<li>
-      					<img src="proyectos/comunidad.jpg" class="responsive-img">
-      					<div class="caption center-align">
-      						<a href="https://montserratgonzalez1.github.io/18_Comunidad-Sostenible/" target="blank">
-      							<h3>Comunidad Sostenible <br> <span>Conocer más </span></h3>
-   
-          					</a> 
-						</div>
-					</li>
-					<li>
-						<img src="proyectos/kane.jpg" class="responsive-img">
-						<div class="caption center-align">
-      						<a href="https://montserratgonzalez1.github.io/kane/" target="blank">
-      							<h3>Kane Theme <br>(Paleta de colores) <br> <span>Conocer más </span></h3>
-							</a> 
-						</div>
-					</li>	
-					<li>
-						<img src="proyectos/spring.JPG" class="responsive-img">
-						<div class="caption center-align">
-      						<a href="https://montserratgonzalez1.github.io/26_Sprint/" target="blank">
-      							<h3>Flatness Spring Came <br> <span>Conocer más </span></h3>
-          					</a>
-						</div>
-					</li>
-					<li>
-						<img src="proyectos/dashboard.JPG" class="responsive-img">
-						<div class="caption center-align">
+      				<!--ESTE YA NO <li>
+      				<img src="proyectos/comunidad.jpg" class="responsive-img">
+      				<div class="caption center-align">
+      				<a href="https://montserratgonzalez1.github.io/18_Comunidad-Sostenible/" target="blank">
+      				<h3>Comunidad Sostenible <br> <span>Conocer más </span></h3>
+          			</a> 
+				</div>
+				</li> -->
+				<li>
+				   <img src="proyectos/kane.jpg" class="responsive-img">
+				   	<div class="caption center-align">
+      					<a href="https://montserratgonzalez1.github.io/kane/" target="blank">
+      					<h3>Kane Theme <br>(Paleta de colores) <br> <span>Conocer más </span></h3>
+					</a> 
+					</div>
+				</li>	
+				<li>
+				    <img src="proyectos/spring.JPG" class="responsive-img">
+					<div class="caption center-align">
+      					<a href="https://montserratgonzalez1.github.io/26_Sprint/" target="blank">
+      					<h3>Flatness Spring Came <br> <span>Conocer más </span></h3>
+          				</a>
+					</div>
+				</li>
+		<!-- ESTE YA NO		<li>
+				    <img src="proyectos/dashboard.JPG" class="responsive-img">
+					<div class="caption center-align">
       					<a href="https://montserratgonzalez1.github.io/45_adventure/" target="blank">
-      						<h3>Adveture Time: Dashboard <br> <span>Conocer más </span> </h3>
-          					
+      					<h3>Adveture Time: Dashboard <br> <span>Conocer más </span> </h3>	
           				</a> 
-						</div>
-					</li>
+					</div>
+				
+				</li>-->
 		</section>
 		<div class="row" id="gustos"> <!-- estos son los titulares de la segunda sección-->
 			<div class="col s12 m12 l12"> 
